<resources>
    <string name="app_name">性多多</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_error">网络未连接</string>
    <string name="network_tips">请检查网络设置后，点击屏幕重新加载</string>
    <string name="null_goods">没有找到相关商品，去其他地方看看吧^_^</string>
    <string name="null_order">您还没有购买过商品哦^_^</string>
    <string name="null_address">您还没有添加收货人信息！</string>
    <string name="no_more">到底了，去其他页面看看吧^_^</string>
    <string name="null_goods_img">没有找到相关的商品图文，我们会尽快添加！</string>
    <string name="center_top_sale">Top热卖</string>
    <string name="center_shirt">美在露上·内衣</string>
    <string name="center_taoato">性爱你得有一套·安全套</string>
    <string name="center_daoju">其乐无穷·道具</string>
    <string name="title_name"><b>性多多</b></string>
    <string name="center_more">MORE></string>
    <string name="me_please_login">欢迎您使用性多多</string>
    <string name="me_clooection">收藏</string>
    <string name="me_system_msg">系统消息</string>
    <string name="me_app_description">私人专业性用品商城</string>
    <string name="me_menu_protect_psw">隐私密码</string>
    <string name="me_menu_user_feedback">客户反馈</string>
    <string name="me_menu_kefu">400-000-3879</string>
    <string name="me_menu_kefu_tip">全天24小时服务</string>
    <string name="me_menu_help">帮助中心</string>
    <string name="me_menu_weibo">微博咨询</string>
    <string name="me_menu_update">检查更新</string>
    <string name="setting_title">设置</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_clear_cache">清除本地缓存</string>
    <string name="setting_app_recommend">您可能喜欢的应用</string>
    <string name="setting_app_2">精品推荐</string>
    <string name="setting_protocol">使用条例</string>
    <string name="setting_rate">版本更新</string>
    <string name="user_info">个人资料</string>
    <string name="user_head">头像</string>
    <string name="user_rank">会员等级</string>
    <string name="user_name">昵称</string>
    <string name="user_address">我的收货地址</string>
    <string name="user_sex">性别</string>
    <string name="user_email">我的邮箱</string>
    <string name="user_update">修改密码</string>
    <string name="user_update_info">编辑个人信息</string>
    <string name="user_create">注册时间</string>
    <string name="user_exit">退出登陆</string>
    <string name="add_address">新增收货地址</string>
    <string name="user_receipt_address_manager">收货地址管理</string>
    <string name="user_receipt_name">收   货   人：</string>
    <string name="user_receipt_phone">手机号码：</string>
    <string name="user_receipt_address">所在地区：</string>
    <string name="dialog_recepit_address">所在地区</string>
    <string name="user_receipt_address_detail">详细地址：</string>
    <string name="user_receipt_ems">邮政编码：</string>
    <string name="hint_user_receipt_name">请输入收货人姓名</string>
    <string name="hint_user_receipt_phone">请输入收货人联系电话</string>
    <string name="hint_user_receipt_address">请选择收货地址</string>
    <string name="hint_user_receipt_address_detail">请输入收货人详细地址</string>
    <string name="hint_user_receipt_ems">请输入邮编</string>
	<string name="deelte_address">删除收货地址</string>
	<string name="save_address">保存</string>
    <string name="register_title">用户注册</string>
    <string name="register_hint_phone_number">请输入注册邮箱</string>
    <string name="register_sms_identified">短信验证</string>
    <string name="register_hint_identifying_code">请输入验证码</string>
    <string name="register_hint_psw">请输入您的密码(6~16位)</string>
    <string name="register_hint_psw2">确认密码</string>
    <string name="register_hint_user_name">请输入您的手机号码</string>
    <string name="register_hint_nick_name">请输入您喜欢的昵称</string>
    <string name="register_hint_email">用户邮箱</string>
    <string name="register_hint_invitation_code">请填写邀请码，没有可以不填</string>
    <string name="register_please_read_protocol_1">已阅读并同意性多多</string>
    <string name="register_please_read_protocol_2">注册协议</string>
    <string name="register_agree_protocol">同意协议并注册</string>
    <string name="register_tag_user_name">用户名：</string>
    <string name="register_tag_nick_name">昵称：</string>
    <string name="register_tag_email">邮箱：</string>
    <string name="register_tag_psw1">密码：</string>
    <string name="register_tag_psw2">确认密码：</string>
    <string name="update_info_phone">联系方式：</string>
    <string name="update_info_sex">性别：</string>
    <string name="update_info_ems">邮政编码：</string>
    <string name="update_info_birth">出生日期：</string>
    <string name="update_info_name">姓名：</string>
    <string name="update_info_nickname">昵称：</string>
    <string name="update_hint_address">请选择您所在的地区</string>
    <string name="update_hint_address_info">请填写您的详细地址</string>
    <string name="update_hint_birth">请选择您的出生日期</string>
    <string name="update_hint_phone">请输入您的联系方式</string>
    <string name="update_hint_name">请输入您的姓名</string>
    <string name="update_hint_nickname">请输入您的昵称</string>
    <string name="update_hint_sex">请选择您的性别</string>
    <string name="update_submit">提交修改</string>
    <string name="login_hint_user_name">手机号码/用户名/邮箱</string>
    <string name="login_find_psw">找回密码</string>
    <string name="login_register1">没有账户？没关系！</string>
    <string name="login_register2">注册</string>
    <string name="login_register3">只需3秒哦~</string>
    <string name="login">登录</string>
    <string name="login_hint_psw">6~16位密码</string>
    <string name="update_psw_title">修改密码</string>
    <string name="update_psw_yuanshi">请输入原密码</string>
    <string name="update_psw_psw">6到16位字符</string>
    <string name="update_psw_sure">再一次输入密码</string>
    <string name="search_recently">最近搜索</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_null">暂无搜索记录</string>
    <string name="search_cancel">取消</string>
    <string name="search_search">搜索</string>
    <string name="search_hint">搜索心仪的宝贝</string>
    <string name="classify_title_name">分类</string>
    <string name="classify_sort_multiple">综合</string>
    <string name="classify_sort_sales">销量</string>
    <string name="classify_sort_time">时间</string>
    <string name="classify_sort_price">价格</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="sweep">扫一扫</string>
    <string name="open_light">开灯</string>
    <string name="shopping_cart">购物车</string>
    <string name="go2center">去挑选</string>
    <string name="cart_tip1">您的购物车还是空的</string>
    <string name="cart_tip2">赶紧去挑选几件吧！</string>
    <string name="cart_select_all">全选</string>
    <string name="cart_account_all">总价：￥</string>
    <string name="cart_btn_balance">结算(0)</string>
    <string name="cart_update">修改</string>
    <string name="cart_ok">完成</string>
    <string name="cart_remove">移除商品</string>
    <string name="good_title">商品详情</string>
    <string name="select_goods_standard">请选择商品规格，数量</string>
    <string name="standard">规格</string>
    <string name="number">购买数量</string>
    <string name="goods_standard">规格选择</string>
    <string name="goods_details">图文详情</string>
    <string name="goods_params">基本参数</string>
    <string name="goods_appraise">商品评价</string>
    <string name="goods_recommend">大家都在看：</string>
    <string name="goods_buy_at_once">￥立即购买</string>
    <string name="goods_add2cart">加入购物车</string>
	<string name="goods_call_kefu">联系客服</string>
    <string name="goods_sure">确定</string>
    <string name="goods_baoyou_tip">支付宝满88包邮，货到付款满218包邮</string>
    <string name="goods_phone_top">您的私人管家：400-000-3879</string>
    <string name="goods_promise_1">100%正品</string>
    <string name="goods_promise_2">保密配送</string>
    <string name="goods_promise_3">7天包换</string>
    <string name="discuss_null">当前没有评价哦~</string>
    <string name="discuss_title">商品评价</string>
    <string name="order_submit_sure_order">确认订单</string>
    <string name="order_submit_order">提交订单</string>
    <string name="order_submit_please_set_address">请填写您的收货地址</string>
    <string name="order_submit_pay_way">支付方式</string>
    <string name="order_pay_way_zhifubao">支付宝</string>
    <string name="order_pay_way_daofu">货到付款</string>
    <string name="order_pay_way_yinlian">银联</string>
    <string name="order_pay_way_caifutong">财付通</string>
	<string name="order_pay_way_zhifubao_preferential">满88包邮</string>
	<string name="order_pay_way_daofu_preferential">满218包邮</string>
    <string name="order_submit_balance_list">结算清单</string>
	<string name="order_submit_goods_list">商品清单</string>
	<string name="order_submit_freight">运费</string>
	<string name="order_submit_freight_price">包邮</string>
	<string name="order_submit_preferential">优惠</string>
	<string name="order_submit_preferential_info">无</string>
    <string name="order_submit_message">给我们留言</string>
    <string name="order_submit_taker_name">收货人：</string>
    <string name="order_submit_taker_address">收货地址：</string>
    <string name="order_submit_activity_tip">(含活动商品)</string>
  	<string name="order_complete_tip">性多多订单</string>
  	<string name="order_complete_tip2">亲为了您能按时收到货、请您保持电话通畅、性多多客服会和您再确认收货信息我们将在24小时内为您发货</string>
    <string name="collection_title">我的收藏</string>
    <string name="collection_title_right_n">编辑</string>
    <string name="collection_title_right_orver">完成</string>
    <string name="collection_null_tips">您还没有收藏任何商品哦~</string>
    <string name="order_history_title">我的订单</string>
    <string name="order_history_id">订单号：</string>
    <string name="order_history_delete">删除订单</string>
    <string name="order_history_logistics">查看物流</string>
    <string name="order_history_take">确认收货</string>
    <string name="order_history_appraise">评价订单</string>
    <string name="order_info">订单详情</string>
    <string name="order_info_state">订单信息：</string>
    <string name="order_info_words">买家留言</string>
    <string name="order_info_id">订单编号：</string>
    <string name="order_info_time">下单时间：</string>
   	<string name="order_info_pay_way">付款方式：</string>
    <string name="order_info_trans_pay">运费：</string>
    <string name="order_info_preferential">享受优惠：</string>
    <string name="order_info_total">订单总金额：</string>
    <string name="order_info_pay">实付款(含运费)：</string>
    <string name="discuss_order">提交评论</string>
    <string name="hint_discuss">亲，您的评价对其他卖家有很大帮助</string>
    <string name="discuss_zhiliang">商品质量:</string>
    <string name="discuss_taidu">服务态度:</string>
    <string name="discuss_sudu">发货速度:</string>
    <string name="discuss_rating">5</string>
    <string name="communication_plate">版块</string>
    <string name="bbs_mypost_send">我的帖子</string>
    <string name="bbs_mypost_back">回复</string>
    <string name="bbs_mypost_login">登陆</string>
    <string name="bbs_plate_null_post">骚年，本板块还没有帖子哦，赶紧来一发^_^</string>
    <string name="bbs_plate_post_host_msg">来一发~</string>
    <string name="postinfo_title">帖子详情</string>
    <string name="postinfo_reply">发送</string>
    <string name="postinfo_reply_hint">说点啥...(不支持表情输入)</string>
    <string name="post_title">发帖</string>
    <string name="post_submit">提交</string>
    <string name="post_hint_title">标题(必填,至少4个字)</string>
    <string name="post_hint_content">说点什么吧...</string>
    <string name="post_style">匿名发布</string>
    <string name="start_lockscreen_protect">开启隐私保护</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="pop_cancel">取  消</string>
    <string name="cart_test_money">0</string>
    <string name="test_sex">男</string>
    <string name="test_sex1">女</string>
</resources>